<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="10dp"
    android:clickable="false"
>
    <TextView
            android:id="@+id/tv_clave_analisis"
            android:text="@string/analisis"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="#00c6ff"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:textSize="27dp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:gravity="right"
    />
    <TextView
            android:id="@+id/tv_tipo_analisis"
            android:text="@string/atiende"
            android:textSize="25dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/tv_clave_analisis"
            android:layout_centerVertical="true"
    />
    <TextView
            android:id="@+id/tv_descripcion_analisis"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="#000000"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_clave_analisis"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textAlignment="viewEnd"
    />
</RelativeLayout>