<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
>
    <ImageView
        android:id="@+id/iv_profile"
        android:layout_marginTop="10dp"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/placeholder_jpg"
        android:layout_centerHorizontal="true"
        android:background="#00c6ff"
        android:padding="3dp"
    />
    <TextView
        android:id="@+id/tv_clave_field"
        android:layout_marginTop="30dp"
        android:text="Clave:"
        android:layout_height="wrap_content"
        android:layout_width="270dp"
        android:textColor="#00c6ff"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_below="@id/iv_profile"
        android:gravity="right"
        android:textSize="30dp"
    />
    <TextView
        android:id="@+id/tv_clave"
        android:gravity="bottom"
        android:paddingLeft="5dp"
        android:textSize="27dp"
        android:text="Clave"
        android:layout_marginTop="33dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed"
        android:layout_toRightOf="@id/tv_clave_field"
        android:layout_below="@id/iv_profile"
    />

    <TextView
            android:id="@+id/tv_especialidad_field"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/especialidad_field"
            android:layout_height="wrap_content"
            android:layout_width="270dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#00c6ff"
            android:layout_below="@id/tv_clave_field"
            android:gravity="right"
            />
    <TextView
            android:id="@+id/tv_especialidad"
            android:paddingLeft="5dp"
            android:textSize="27dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/especialidad"
            android:layout_marginTop="13dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_toRightOf="@id/tv_especialidad_field"
            android:layout_below="@id/tv_clave_field"
    />

    <TextView
            android:id="@+id/tv_nombre_field"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="Nombre:"
            android:layout_height="wrap_content"
            android:layout_width="270dp"
            android:textStyle="bold"
            android:textColor="#00c6ff"
            android:fontFamily="sans-serif-condensed"
            android:layout_below="@id/tv_especialidad_field"
            android:gravity="right"
    />
    <TextView
            android:id="@+id/tv_nombre"
            android:layout_marginTop="13dp"
            android:paddingLeft="5dp"
            android:textSize="27dp"
            android:text="Nombre"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_toRightOf="@id/tv_nombre_field"
            android:layout_below="@id/tv_especialidad_field"
    />

    <TextView
            android:id="@+id/tv_direccion_field"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/direccion_field"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:layout_width="270dp"
            android:textStyle="bold"
            android:textColor="#00c6ff"
            android:layout_below="@id/tv_nombre_field"
            android:gravity="right"
    />
    <TextView
            android:id="@+id/tv_direccion"
            android:layout_marginTop="13dp"
            android:textSize="27dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="5dp"
            android:text="@string/direccion"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_toRightOf="@id/tv_direccion_field"
            android:layout_below="@id/tv_nombre"
    />

    <TextView
            android:id="@+id/tv_telefono_field"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/telefono_field"
            android:layout_height="wrap_content"
            android:layout_width="270dp"
            android:textStyle="bold"
            android:textColor="#00c6ff"
            android:layout_below="@id/tv_direccion_field"
            android:gravity="right"
    />
    <TextView
            android:id="@+id/tv_telefono"
            android:layout_marginTop="13dp"
            android:textSize="27dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="5dp"
            android:text="@string/telefono"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_toRightOf="@id/tv_telefono_field"
            android:layout_below="@id/tv_direccion_field"
    />
</RelativeLayout>