<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:weightSum="1"
    android:paddingTop="20dp"
>
    <RelativeLayout
            android:id="@+id/rl_reporte_analisis_paciente"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="10dp"
            android:clickable="true"
            android:gravity="center_vertical"
    >
        <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/analisis_paciente"
                android:textColor="#00c6ff"
                android:textStyle="bold"
                android:textSize="25dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:gravity="center"
                android:text="Reporte de los análisis que se realiza un paciente"
                android:textSize="23dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/rl_reporte_doctores_paciente"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="10dp"
            android:gravity="center_vertical"
    >
        <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctores_paciente"
                android:textColor="#00c6ff"
                android:textStyle="bold"
                android:textSize="25dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:gravity="center"
                android:text="Reporte de los doctores que atienden a un paciente"
                android:textSize="23dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/rl_reporte_pacientes_analisis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="10dp"
            android:gravity="center_vertical"
            >
        <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pacientes_analisis"
                android:textColor="#00c6ff"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25dp"
                android:layout_centerHorizontal="true"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:gravity="center"
                android:text="Reporte de los pacientes que se realizan un análisis"
                android:textSize="23dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/rl_reporte_pacientes_doctor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="10dp"
            android:gravity="center_vertical"
    >
        <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pacientes_doctor"
                android:textStyle="bold"
                android:textColor="#00c6ff"
                android:textSize="25dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv4"
                android:gravity="center"
                android:text="Reporte de los pacientes de un doctor"
                android:textSize="23dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
        />
    </RelativeLayout>
</LinearLayout>